--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -1,64 +1,116 @@
+<link rel='stylesheet' href='/stylesheets/stripe.css'/>
 <div class="row">
-    <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
+    <div class="col-sm-6 col-md-4 mx-auto my-5">
         <h1>Checkout</h1>
-        <h4>Your Total: ${{total}}</h4>
-        <div id="charge-error" class="alert alert-danger {{#if noError}}hidden{{/if}}">
+        <h4>Your Total: €{{total}}</h4>
+        <div id="charge-error" class="alert alert-danger {{#if noError}}d-none{{/if}}">
             {{errMsg}}
         </div>
-        <form action="/checkout" method="post" id="checkout-form">
-            <div class="row">
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" class="form-control" required name="name">
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="address">Address</label>
-                        <input type="text" id="address" class="form-control" required name="address">
-                    </div>
-                </div>
-                <hr>
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="card-name">Card Holder Name</label>
-                        <input type="text" id="card-name" class="form-control" required>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="card-number">Credit Card Number</label>
-                        <input type="text" id="card-number" class="form-control" required>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <div class="form-group">
-                                <label for="card-expiry-month">Expiration Month</label>
-                                <input type="text" id="card-expiry-month" class="form-control" required>
-                            </div>
-                        </div>
-                        <div class="col-xs-6">
-                            <div class="form-group">
-                                <label for="card-expiry-year">Expiration Year</label>
-                                <input type="text" id="card-expiry-year" class="form-control" required>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-12">
-                    <div class="form-group">
-                        <label for="card-cvc">CVC</label>
-                        <input type="text" id="card-cvc" class="form-control" required>
-                    </div>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-success">Buy now</button>
-        </form>
-    </div>
-</div>
 
-<script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-<script type="text/javascript" src="javascripts/checkout.js"></script>
+
+<script src="https://js.stripe.com/v3/"></script>
+<script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script> 
+<script src="https://js.stripe.com/v3/"></script>
+
+<form id="payment-form" action="/charge" method="post">
+  <div class="form-row">
+    <label for="name">
+      Name
+    </label>
+    <input id="name" name="name" placeholder="Jenny Rosen" required>
+  </div>
+
+  <div class="form-row">
+    <label for="ideal-bank-element">
+      iDEAL Bank
+    </label>
+    <div id="ideal-bank-element">
+      <!-- A Stripe Element will be inserted here. -->
+    </div>
+  </div>
+
+  <button>Submit Payment</button>
+
+  <!-- Used to display form errors. -->
+    <div id="error-message" role="alert"></div>
+</form>
+
+<script>
+var stripe = Stripe('pk_test_6pRNASCoBOKtIshFeQd4XMUh');
+
+// Create an instance of Elements.
+var elements = stripe.elements();
+
+// Custom styling can be passed to options when creating an Element.
+// (Note that this demo uses a wider set of styles than the guide below.)
+var style = {
+  base: {
+    padding: '10px 12px',
+    color: '#32325d',
+    fontFamily: '-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif',
+    fontSmoothing: 'antialiased',
+    fontSize: '16px',
+    '::placeholder': {
+      color: '#aab7c4'
+    },
+  },
+  invalid: {
+    color: '#fa755a',
+  }
+};
+
+// Create an instance of the idealBank Element.
+var idealBank = elements.create('idealBank', {style: style});
+
+// Add an instance of the idealBank Element into the `ideal-bank-element` <div>.
+idealBank.mount('#ideal-bank-element');
+
+var errorMessage = document.getElementById('error-message');
+
+// // Handle form submission.
+// var form = document.getElementById('payment-form');
+// form.addEventListener('submit', function(event) {
+//   event.preventDefault();
+//   // showLoading();
+
+//   var sourceData = {
+//     type: 'ideal',
+//     amount: '{{total}}' * 100,
+//     currency: 'eur',
+//     owner: {
+//       name: document.querySelector('input[name="name"]').value,
+//     },
+//     // Specify the URL to which the customer should be redirected
+//     // after paying.
+//     redirect: {
+//       return_url: 'https://webshop-template-niekavanlosenoord.c9users.io/success',
+//     },
+//   };
+
+//   // Call `stripe.createSource` with the idealBank Element and additional options.
+//   stripe.createSource(idealBank, sourceData).then(function(result) {
+//     if (result.error) {
+//       // Inform the customer that there was an error.
+//       errorMessage.textContent = result.error.message;
+//       errorMessage.classList.add('visible');
+//       // stopLoading();
+//     } else {
+//       // Redirect the customer to the authorization URL.
+//       errorMessage.classList.remove('visible');
+//       stripeSourceHandler(result.source);
+//     }
+//   });
+// });
+
+// function stripeSourceHandler(source) {
+//   // Redirect the customer to the authorization URL.
+//   document.location.href = source.redirect.url;
+// }
+// </script>
+{{!--<script src="javascripts/checkout.js"></script>--}}
+
+</div>
+</div>
