--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -1,40 +1,101 @@
+<div class="container-fluid" id="cart-bg">
+    <div class="container">
+        
+
 {{# if products }}
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+    <div class="row mt-5 pt-5 ">
+        <div class="col-sm-6 col-md-6 mx-auto bg-light p-5"  id="shopping-cart-list" >
             <ul class="list-group">
-                {{# each products }}
-                    <li class="list-group-item">
-                        <span class="badge">{{ this.qty }}</span>
-                        <strong>{{ this.item.title }}</strong>
-                        <span class="label label-success">${{ this.price }}</span>
-                        <div class="btn-group">
-                            <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a href="/reduce/{{this.item._id}}">Reduce by 1</a></li>
-                                <li><a href="/remove/{{this.item._id}}">Remove All</a></li>
+{{# each products }}
+                <div class="thumbnail">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <img id="border-primary" src="{{ item.imagePath }}" alt="..." class="img-fluid">
+                                                    <div class="price pull-left p-2">€{{ item.price }}</div>
+    
+                        </div>
+                        <div class="col-md-6">
+                        <h3>{{ this.item.title }}</h3>
+                        <p class="description">{{ item.descriptionShort }}</p>
+                        <div class="clearfix">
+                      
+                        </div>                            
+                        </div>
+                        <div class="col-md-2">
+                                  <div class="btn-group">
+                            <button class="btn btn-outline-info btn-xs dropdown-toggle" type="button" data-toggle="dropdown">{{ this.qty }}<span class="caret"></span></button>
+                            <ul class="dropdown-menu ">
+                                <li><a href="/reduce/{{this.item._id}}"><i class="fas fa-plus"></i></a></li>
+                                <li><a href="/reduce/{{this.item._id}}"><i class="fas fa-minus"></i></a></li>
+                                <li><a href="/remove/{{this.item._id}}"><i class="fas fa-trash"></i></a></li>
                             </ul>
                         </div>
-                    </li>
-                {{/each}}
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="caption">
+
+                    </div>
+                </div>
+        {{/each}}
             </ul>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <strong>Total: {{ totalPrice }}</strong>
+        <div class="col-sm-6 mx-auto bg-light pb-5 mb-5">
+        <div class="col-sm-6 col-md-6 d-inline mb-5" >
+            <strong>Totaal: €{{ totalPrice }}</strong>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <a href="/checkout" type="button" class="btn btn-success">Checkout</a>
+        <div class="col-sm-6 col-md-6 d-inline">
+            {{#if login}}
+            <button class="btn btn-outline-info"><a href="/checkout">Naar betalen</a></button>
+            {{else}}
+            <button class="btn btn-outline-info"><a href="/signup">Naar inloggen</a></button>
+            {{/if}}
+        </div>
         </div>
     </div>
 {{ else }}
     <div class="row">
-        <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
+        <div class="col-sm-6 col-md-6 mx-auto">
             <h2>No Items in Cart</h2>
         </div>
     </div>
 {{/if}}
+    </div>
+</div>
 
+        {{!--{{# each products }}--}}
+        {{!--    <div class="col-sm-6 col-md-6 px-5 py-3" id="shopping-cart-list">--}}
+        {{!--        <div class="thumbnail">--}}
+        {{!--            <div class="row">--}}
+        {{!--                <div class="col-md-4">--}}
+        {{!--                    <img id="border-primary" src="{{ item.imagePath }}" alt="..." class="img-fluid">--}}
+        {{!--                                            <div class="price pull-left p-2">€{{ item.price }}</div>--}}
+    
+        {{!--                </div>--}}
+        {{!--                <div class="col-md-6">--}}
+        {{!--                <h3>{{ this.item.title }}</h3>--}}
+        {{!--                <p class="description">{{ item.description }}</p>--}}
+        {{!--                <div class="clearfix">--}}
+                      
+        {{!--                </div>                            --}}
+        {{!--                </div>--}}
+        {{!--                <div class="col-md-2">--}}
+        {{!--                          <div class="btn-group">--}}
+        {{!--                    <button class="btn btn-outline-info btn-xs dropdown-toggle" type="button" data-toggle="dropdown">{{ this.qty }}<span class="caret"></span></button>--}}
+        {{!--                    <ul class="dropdown-menu ">--}}
+        {{!--                        <li><a href="/reduce/{{this.item._id}}"><i class="fas fa-plus"></i></a></li>--}}
+        {{!--                        <li><a href="/reduce/{{this.item._id}}"><i class="fas fa-minus"></i></a></li>--}}
+        {{!--                        <li><a href="/remove/{{this.item._id}}"><i class="fas fa-trash"></i></a></li>--}}
+        {{!--                    </ul>--}}
+        {{!--                </div>--}}
+        {{!--                </div>--}}
+        {{!--            </div>--}}
+        {{!--            <hr>--}}
+        {{!--            <div class="caption">--}}
+
+        {{!--            </div>--}}
+        {{!--        </div>--}}
+        {{!--    </div>--}}
+        {{!--{{/each}}--}}
