--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -1,6 +1,9 @@
-<div class="row">
-    <div class="col-md-4 col-md-offset-4">
-        <h1>Sign In</h1>
+<div class="container-fluid" id="login--header" style=" background-position:top; background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1467167/pexels-photo-1467167.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); ">
+
+
+<div class="row ">
+    <div class="col-md-4 mx-auto p-5 bg-light mt-5 login--box">
+        <h1 class="text-center">Login</h1>
         {{#if hasErrors}}
             <div class="alert alert-danger">
                 {{# each messages }}
@@ -18,8 +21,9 @@
                 <input type="password" id="password" name="password" class="form-control">
             </div>
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-            <button type="submit" class="btn btn-primary">Sign In</button>
+            <button type="submit" class="btn btn-outline-info w-100 mt-2">Inloggen</button>
         </form>
-        <p>Don't have an account? <a href="/user/signup">Sign up instead!</a></p>
+        <p class="text-center mt-3"><a href="/user/signup">Nog geen account? Maak er een aan.</a></p>
     </div>
 </div>
+</div>    
