--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,5 +1,8 @@
+<div class="container-fluid" id="login--header" style=" background-position:top; background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/1467167/pexels-photo-1467167.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); ">
+
+
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-8 mx-auto bg-light login--box p-5">
         <h1>Sign Up</h1>
         {{#if hasErrors}}
             <div class="alert alert-danger">
@@ -8,7 +11,9 @@
                 {{/each}}
             </div>
         {{/if}}
-        <form action="/user/signup" method="post">
+        <div class="row">
+            <div class="col-md-6">
+                <form action="/user/signup" method="post">
             <div class="form-group">
                 <label for="email">E-Mail</label>
                 <input type="text" id="email" name="email" class="form-control">
@@ -17,8 +22,38 @@
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" class="form-control">
             </div>
+             <div class="form-group">
+                <label for="name">Naam</label>
+                <input  id="name" name="name" class="form-control">
+            </div>
+             <div class="form-group">
+                <label for="street">Straat</label>
+                <input  id="street" name="street" class="form-control">
+            </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                <label for="number">Huisnummer</label>
+                <input  id="number" name="number" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="zip">Postcode</label>
+                <input  id="zip" name="zip" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="city">Stad</label>
+                <input  id="city" name="city" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="country">Land</label>
+                <input  id="country" name="country" class="form-control">
+            </div>
+            </div>
+                 
             <input type="hidden" name="_csrf" value="{{ csrfToken }}">
             <button type="submit" class="btn btn-primary">Sign Up</button>
-        </form>
+        </div>
+
     </div>
+</div>
 </div>
