--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -50,7 +50,7 @@
             {{#if login}}
             <button class="btn btn-outline-info"><a href="/checkout">Naar betalen</a></button>
             {{else}}
-            <button class="btn btn-outline-info"><a href="/signup">Naar inloggen</a></button>
+            <button class="btn btn-outline-info"><a href="/user/signin">Naar inloggen</a></button>
             {{/if}}
         </div>
         </div>
