--- a/views/shop/charge.hbs
+++ b/views/shop/charge.hbs
@@ -1,1 +1,6 @@
-<h1>CHARGE!</h1>
+<container class="fluid">
+    <col-md-6 class="mx-auto mt-5 text-center">
+        <h1 class="mt-5">Bedankt voor uw betaling!</h1>
+        <a href="/user/profile">Bekijk uw bestellingen</a>
+    </col-md-6>
+</container>
