--- a/views/shop/success.hbs
+++ b/views/shop/success.hbs
@@ -5,7 +5,9 @@
         <hr>
         <h4>Details van uw bestelling</h4>
         <p>Bedrag - {{amount}} {{currency}}<br>
-        Naam {{users.name}}<br>
-        </p>
+        <div class="d-inline">
+            <a href="/user/profile" class="btn btn-outline-info">Bekijk je bestelling</a>
+            <a href="/" class="btn btn-outline-secondary">Naar startpagina</a>
+        </div>
     </div>
 </div>
