--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,7 @@ font-family: 'Lato', sans-serif;
 #cart-bg{
     margin-top:-50px;
     background: linear-gradient(rgba(0, 0, 0,.2), rgba(0,0,0,.2)), url('https://images.pexels.com/photos/572487/pexels-photo-572487.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); 
-    
+    height:100vh;
 }
 
 #shopping-cart-list hr{
@@ -192,7 +192,10 @@ font-family: 'Lato', sans-serif;
 
 #profile{
         font-family: 'Lato', sans-serif;
+}
 
+#profile hr{
+    border: 1px solid rgba(0,0,0,0.15);
 }
 
 
@@ -283,23 +286,47 @@ font-size:24pxover{
 /*ADMIN*/
 /*DASHBOARD*/
 
-.dashbox{
+#dash{
+    color:#333!important;
+}
+
+#dash .col-4{
+    padding-top:30px;
+}
+
+#dash .col{
+    color:white;
     height:50vh;
-    background:#292C30;
-    border:20px solid white;
--webkit-box-shadow: inset 0px 0px 147px 0px rgba(0,0,0,0.75);
--moz-box-shadow: inset 0px 0px 147px 0px rgba(0,0,0,0.75);
-box-shadow: inset 0px 0px 147px 0px rgba(0,0,0,0.75);    
-}
-
-.dashbox h3{
-    background-color:#1EA2B8;
     padding:30px;
+    background:#333;
+    box-shadow:0px 10px 50px rgba(0,0,0,0.4);
+    /*border-radius:50%;*/
 }
 
-#dash hr{
-    border:.5px solid rgba(255,255,255,0.1);
-    width:80%;
+#dash h1{
+    font-size:100px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#dash .sub{
+    height:80px!important;
+    /*background:blue;*/
+}
+
+#dash #one{
+    background:#2b97a8;
+}
+
+#dash #two{
+    background:#42a3b2;
+}
+
+#dash #three{
+    background:#5aaebb;
+}
+
+#counter{
+    float:right!important;
 }
 
 /*#dash p{*/
@@ -337,7 +364,8 @@ font-family: 'Lato', sans-serif;
 
 #sidebar .admin-brand{
   height:80px;
-  background:#1EA2B8;
+  background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url('https://images.pexels.com/photos/572487/pexels-photo-572487.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');
+  background-size:cover;
   color:white;
 }
 
@@ -493,6 +521,17 @@ font-family: 'Lato', sans-serif;
     border-left:30px solid white;
     border-bottom:15px solid white;
     border-top:30px solid white;
+}
+
+/*//ORDERs*/
+#orders{
+      font-family: 'Lato', sans-serif;
+}
+
+#orders .btn{
+    position:relative;
+    right:0%!important;
+    top:10;
 }
 
 
