--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -5,59 +5,46 @@
         <div class="col-md-2 p-0 m-0 sidebar">
         {{>sidebar-admin}}
         </div>
-            <div class="col-md-10 text-light" id="dash">
+            <div class="col-md-10 text-light text-center" id="dash">
                <div class="row">
-                   <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> {{totalItems}}</span><br>
-                        Deze week: <span class="badge badge-info">{{totalUsers}}</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-                   <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> 21</span><br>
-                        Deze week: <span class="badge badge-info">13</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-                   <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> 21</span><br>
-                        Deze week: <span class="badge badge-info">13</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-               </div> 
+                <div class="col-4">
+                 <div class="col p-0">
+                    <div class="col-sm-12" >
+                     <h1 class="pt-5">{{recentOrders}}</h1>
+                     <h4>Nieuwe bestellingen</h4>
+                     <a href="/dashboard/bestellingen-recent" class="btn btn-outline-info w-100 d-block">Nieuwe bestellingen bekijken</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                 <div class="col">
+                     <h1 class="pt-3">{{completedOrders}}</h1>
+                     <h4>Voltooide bestellingen</h4>
+                     <a href="/dashboard/bestellingen-recent" class="btn btn-outline-info w-100 d-block">Alle Bestellingen bekijken</a>
+                 </div>
+                </div>
+                <div class="col-4">
+                 <div class="col">
+                     <h1 class="pt-3">{{totalUsers}}</h1>
+                     <h4>Geregistreerde gebruikers</h4>
+                     <a href="/dashboard/bestellingen-recent" class="btn btn-outline-info w-100 d-block">Naar mailinglijst</a>
+                 </div>
+                </div>
+               </div>
                 <div class="row">
-                  <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> 21</span><br>
-                        Deze week: <span class="badge badge-info">13</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-                   <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> 21</span><br>
-                        Deze week: <span class="badge badge-info">13</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-                   <div class="col-md-4 dashbox p-0">
-                       <h3 class=" text-center d-block">Bezoekers totaal</h3>
-                       <hr>
-                        <p>Deze maand:<span class="badge badge-info"> 21</span><br>
-                        Deze week: <span class="badge badge-info">13</span><br>
-                        vandaag: <span class="badge badge-info">3</span></p>
-                   </div>
-               </div> 
-                <div class="row">
-                   <div class="col-md-4 dashbox"></div>
-                   <div class="col-md-4 dashbox"></div>
-                   <div class="col-md-4 dashbox"></div>
-               </div> 
-            </div>
+                <div class="col-4">
+                 <div class="col">
+                     <h1 class="pt-3">{{totalItems}}</h1>
+                     <h4>Producten online</h4>
+                     <a href="/dashboard/bestellingen-recent" class="btn btn-outline-info w-100 d-block">Alle producten bekijken</a>
+                 </div>                </div>
+                <div class="col-4">
+                 <div class="col"></div>
+                </div>
+                <div class="col-4">
+                 <div class="col"></div>
+                </div>
+               </div>
     
     
 </div>
