--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -2,8 +2,8 @@
     <div class="container">
         
 
+    <div class="row mt-5 pt-5">
 {{# if products }}
-    <div class="row mt-5 pt-5 ">
         <div class="col-sm-8 col-md-8 mx-auto bg-light p-5"  id="shopping-cart-list" >
             <ul class="list-group">
 {{# each products }}
@@ -29,7 +29,7 @@
                                 <li><a href="/remove/{{this.item._id}}"><i class="fas fa-trash"></i></a></li>
                             </ul>
                         </div>
-                            <div class="price pull-left p-2">€{{ totalprice }}</div>
+                            <div class="price pull-left p-2">€{{ totalPrice }}</div>
                         </div>
                     </div>
                     <hr>
@@ -54,11 +54,11 @@
             {{/if}}
         </div>
         </div>
-    </div>
 {{ else }}
-    <div class="row">
+    </div>
+    <div class="row mt-5 bg-white"  style="height:80vh">
         <div class="col-sm-6 col-md-6 mx-auto">
-            <h2>No Items in Cart</h2>
+            <h2 class="alert alert-warning mt-5">No Items in Cart</h2>
         </div>
     </div>
 {{/if}}
