--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -14,14 +14,14 @@
             </div>
         </div>
     </div>
+        <a href="/">
+            <div class="link">
+                    <img src="../img/populair.png" class="p-2 ml-2"> <span>Home</span>
+            </div>
+        </a>
         <a href="/sizes">
             <div class="link">
                     <img src="../img/size.png" class="p-2 ml-2"> <span>Sizes</span>
-            </div>
-        </a>
-        <a href="/popular">
-            <div class="link">
-                    <img src="../img/populair.png" class="p-2 ml-2"> <span>Populair</span>
             </div>
         </a>
         <a href="/brands">
@@ -29,14 +29,14 @@
                 <img src="../img/brands.png" class="p-2 ml-2"> <span>Brands</span>
             </div>
         </a>
-        <a href="/devices">
+        <a href="/refresh">
             <div class="link">
-                    <img src="../img/devices.png" class="p-2 ml-2"> <span>Devices</span>
+                    <img src="../img/devices.png" class="p-2 ml-2"> <span>Refresh Data</span>
             </div>
         </a>
         <a href="/new">
             <div class="link">
-                    <img src="../img/new.png" class="p-2 ml-2"><span>New releases</span>
+                    <img src="../img/new.png" class="p-2 ml-2"><span>About</span>
             </div>
         </a>
 </div>
